--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="content">
             <div class="image-box">
-                <img src="/img/image1.jpg" alt="">
+                <img src="img/image1.jpg" alt="">
             </div>
             <div class="text-box">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolores, consectetur obcaecati! Incidunt quaerat excepturi necessitatibus nam nemo eum mollitia facere inventore  consectetur adipisicing elitofficia ipsa accusamus, beatae totam soluta magni in quas.</p>
